--- a/miu-study/cs472-WAP/css/styleme.css
+++ b/miu-study/cs472-WAP/css/styleme.css
@@ -20,7 +20,7 @@ body .main {
     line-height: 22px;
     
 }
-body .main section{
+body .main .section{
     padding: 40px;
 }
 body .main section article{
