--- a/miu-study/cs472-WAP/css/styleme.css
+++ b/miu-study/cs472-WAP/css/styleme.css
@@ -1,3 +1,8 @@
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #111c6e;
+    font-size: 2.2em;
+}
 h2{
     font-family: Arial, Helvetica, sans-serif;
     color: #111c6e;
