--- a/miu-study/cs472-WAP/css/styleme.css
+++ b/miu-study/cs472-WAP/css/styleme.css
@@ -1,6 +1,4 @@
-/*Su Lai Myint - 613735
-    W1D3 Recipe Lab
-*/
+
 h1{
     font-family: Arial, Helvetica, sans-serif;
     color: #111c6e;
@@ -12,7 +10,13 @@ h2{
     font-size: 1.6em;
 }
 .highlight{
-    color: rgb(139, 93, 23);
+    color: rgb(202, 122, 3);
+    font-weight: bold;
+    font-style: italic;
+}
+.highlight-positive{
+    color: rgb(230, 9, 138);
+    font-size: larger;
     font-weight: bold;
     font-style: italic;
 }
@@ -20,8 +24,11 @@ p::first-letter{
   font-size: 1.5em;  
 }
 dl dt{
-    color: rgb(139, 93, 23);
+    color: rgb(202, 122, 3);
     font-weight: bold;
+}
+body main a:hover{
+    color: rgb(202, 122, 3);
 }
 body .main {    
     text-align: left;
@@ -34,7 +41,12 @@ body .main section{
 body .main section article{
     margin-bottom: 30px;;
 }
-
+body .main section .txt-itl{
+    font-style: italic;
+}
+body .main section .pop-txt{
+    font-weight: bold;
+}
 ol.reverse{
     counter-reset: my-custom-counter 5;
     list-style: none;
