added comment in files

--- a/miu-study/cs472-WAP/css/styleme.css
+++ b/miu-study/cs472-WAP/css/styleme.css
@@ -1,4 +1,6 @@
-
+/*Su Lai Myint - 613735
+    W1D3 Assignment 2 Lab02 About Page
+*/
 h1{
     font-family: Arial, Helvetica, sans-serif;
     color: #111c6e;
