--- a/miu-study/cs472-WAP/w1d2recipe/recipe.css
+++ b/miu-study/cs472-WAP/w1d2recipe/recipe.css
@@ -1,5 +1,5 @@
 /*Su Lai Myint - 613735
-    W1D3 Recipe Lab
+    W1D3 Assignment 2 Recipe Lab
 */
 body{
     background: white url(image/silverware.jpg) repeat;
