--- a/miu-study/cs472-WAP/css/main.css
+++ b/miu-study/cs472-WAP/css/main.css
@@ -1,3 +1,6 @@
+/*Su Lai Myint - 613735
+    W1D1 Assignment 1 Home Page
+*/
 body{
     background: #5B5E73;
     font-family: Arial, Helvetica, sans-serif;
