--- a/miu-study/cs472-WAP/assignment14/minibankapp/views/index.html
+++ b/miu-study/cs472-WAP/assignment14/minibankapp/views/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS472 MiniBankingApp</title>
     <link rel="stylesheet" href="/static/css/styles.css">
-    <script defer src="/static/js/minibankapp.js"></script>
+    <!-- <script defer src="/static/js/minibankapp.js"></script> -->
 </head>
 <body>
     <header>
