--- a/miu-study/cs472-WAP/final-exam/eregistrar/views/registration.pug
+++ b/miu-study/cs472-WAP/final-exam/eregistrar/views/registration.pug
@@ -100,7 +100,7 @@
     </main><!-- End main-content -->  <!-- Start footer -->
     <footer>
         <div>
-            <span style="margin-left: 1em;">Su Lai Myint : : : CS472-WAP</span>
+            <span style="margin-left: 1em;">[Put Your Name Here] : : : CS472-WAP</span>
             <span style="float: right;margin-right: 1em;">&copy; March 2022</span>
         </div>
     </footer>
